--- a/index.html
+++ b/index.html
@@ -10,6 +10,43 @@
 </head>
 <body>
 
+    <header>
+
+        <a href="#" class="logo">Logo</a>
+        
+        <div class="navigation">
+            <ul class="menu">
+                <li class="menu-item"><a href="#">Home</a></li>
+
+                <li class="menu-item">
+                    <a class="sub-btn" href="#">Dropdown <i class="fas fa-angle-down"></i></a>
+                    <ul class="sub-menu">
+                       <li class="sub-item"><a href="#">Sub Item 01</a></li> 
+                       <li class="sub-item"><a href="#">Sub Item 02</a></li> 
+                       <li class="sub-item"><a href="#">Sub Item 03</a></li> 
+                    </ul>
+                </li>
+
+                <li class="menu-item">
+                    <a class="sub-btn" href="#">with Sub-drowndown <i class="fas fa-angle-down"></i> </a>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="#">Sub Item 01</a></li> 
+                        <li class="sub-item"><a href="#">Sub Item 02</a></li> 
+                        <li class="sub-item"><a href="#">Sub Item 03</a></li> 
+                        <li class="sub-item"><a href="#">Sub Item 04</a></li> 
+                    </ul>
+                </li>
+
+
+                <li class="menu-item"><a href="#">Services</a></li>
+                <li class="menu-item"><a href="#">About</a></li>
+                <li class="menu-item"><a href="#">Contact</a></li>
+
+            </ul>
+        </div>
+
+    </header>
+
 
     <!-- link Script  -->
     <script src="script.js"></script>
